--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-sanity": "^11.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "sanity": "^4.18.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
